# Decentnet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
decentnet/: __init__.py  __main__.py
docs/: ONBOARDING.md  PEER_DEPLOYMENT.md  RELEASE_NOTES_0.2.0.md
